# phylogenysort

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  readme.md
.Rproj.user/2FCAF703/: cpp-definition-cache  persistent-state
.Rproj.user/2FCAF703/compilation-database/: config.json
.Rproj.user/2FCAF703/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/2FCAF703/sources/session-bd4aa122/: 2B287828  2B287828-contents
R/: extendr-wrappers.R  phylogeny_sort.R
src/: Makevars.in  Makevars.win.in  entrypoint.c  phylogenysort-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs  main.rs  parser.rs  reorder.rs  tree.rs  utils.rs  writenewick.rs
